# dubbing_video_translator

./: .gitignore  .pre-commit-config.yaml  README.md  app_settings.json  build.bat  build.py  index.html  main.py  package.json  requirements.txt  requirements_no_sherpa.txt  todo.md  transcriber.py  translator.py  video_processor.py  voice_cloner.py
docs/: architecture.md  project-rules.md
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  run_test.ps1  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: comm.rs  ffmpeg.rs  lib.rs  pipeline.rs
src-tauri/src/audio_extractor/: mod.rs
src-tauri/src/config/: mod.rs
src-tauri/src/diarization/: mod.rs
src-tauri/src/output/: mod.rs
src-tauri/src/stt/: mod.rs
src-tauri/src/translation/: mod.rs  mod_new.rs
src-tauri/src/vad_ffmpeg/: mod.rs
utils/: config_manager.py  segment_utils.py
