[package]
name = "app"
version = "0.1.0"
description = "DubVidTra2 — локальный перевод видео с субтитрами"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.78"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.0.0", features = [] }
tauri-plugin-dialog = "2.0.0-rc"
tauri-plugin-fs = "2.0.0-rc"
tauri-plugin-process = "2.0.0-rc"

anyhow = "1.0"
thiserror = "1.0"
toml = "0.8"
dirs = "6.0"
hound = "3.5"
encoding_rs = "0.8"

llama-cpp-2 = { version = "0.1.146", features = ["cuda"] }
sherpa-onnx = { version = "1.13.2", default-features = false, features = ["shared"] }

[features]
default = []
